[tool.poetry]
name = "sublime-toolrunner"
version = "0.1.0"
description = ""
authors = ["Alan Reyes <kutt@katrea.net>"]

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.5.0"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bugbear = "^20.11.1"
isort = "^5.7.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
