[tool.poetry]
name = "tool_runner"
version = "2021.2.1"
description = ""
authors = ["Alan Reyes <kutt@katrea.net>"]

[tool.poetry.dependencies]
python = "^3.8"
types-invoke = "^1.6.8"

[tool.poetry.dev-dependencies]
invoke = "^1.7.1"
flake8 = "^4.0.1"
black = "^22.3"
flake8-bugbear = "^22.4.25"
isort = "^5.7.0"
pytest = "^7.1.2"
pylint = "^2.12"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
