[tool.poetry]
name = "tool_runner_plugin"
version = "2021.2.1"
description = ""
authors = ["Alan Reyes <kutt@katrea.net>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
invoke = "^1.7.3"
flake8 = "^5.0.4"
black = "^22.10.0"
flake8-bugbear = "^22.10.27"
isort = "^5.7.0"
pytest = "^7.2.0"
pylint = "^2.15.5"
mypy = "^0.990"
types-invoke = "^1.7.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
